@@ -15165,4 +15165,7 @@ MK: A\x00b
 /effg/hex
 ** Unexpected non-hex-digit 'g' in hex pattern: quote missing?
 
+/(?J)(?'a'))(?'a')/
+Failed: error 122 at offset 10: unmatched closing parenthesis
+
 # End of testinput2 
